--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,14 @@ h1 {
   font-size: 24px;
 }
 
+h3 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
 .landing {
   display: flex;
   flex-direction: column;
@@ -36,4 +44,43 @@ h1 {
 
 .landing-games > img {
   justify-self: center;
+}
+
+.game-info {
+  margin: 0.3rem;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  /* grid-template-rows: 1fr 1fr; */
+  column-gap: 1rem;
+}
+
+.heart-button {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-right: 1rem;
+  width: 100%;
+}
+
+.game-description {
+  margin-top: 1rem;
+  grid-column: 1 / -1;
+}
+
+.game-description > h3 {
+  margin-bottom: 0.5rem;
+}
+
+.reviews {
+  margin: 0.3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.reviews > h1 {
+  margin-bottom: 0.5rem;
+}
+
+.user-review {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
