changes to styling of landing page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,6 @@ h4 {
   flex-direction: column;
   padding: 1rem;
   background-color: lightgray;
-  /* margin: 0.3rem; */
 }
 
 .landing > h1 {
@@ -40,10 +39,10 @@ h4 {
 }
 
 .landing-games {
-  /* margin: 0.3rem; */
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 1rem;
+  column-gap: 1rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -53,10 +52,8 @@ h4 {
 }
 
 .game-info {
-  /* margin: 0.3rem; */
   display: grid;
   grid-template-columns: 1fr 2fr;
-  /* grid-template-rows: 1fr 1fr; */
   column-gap: 1rem;
 }
 
@@ -77,7 +74,6 @@ h4 {
 }
 
 .reviews {
-  /* margin: 0.3rem; */
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -94,12 +90,10 @@ h4 {
 .user-info {
   display: grid;
   grid-template-columns: 4fr 1fr;
-  /* margin: 0.3rem; */
   margin-bottom: 1rem;
 }
 
 .favourites {
-  /* margin: 0.3rem; */
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
