--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
 /* container for main page and then class used for dynamic pages */
-main,
-.main-body {
-  margin: 0.3rem;
+main {
+  margin: 5px;
 }
 
 h1 {
@@ -25,6 +32,7 @@ h4 {
   flex-direction: column;
   padding: 1rem;
   background-color: lightgray;
+  border-radius: 1rem;
 }
 
 .landing > h1 {
@@ -39,16 +47,45 @@ h4 {
 }
 
 .landing-games {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  row-gap: 1rem;
-  column-gap: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: 1px solid black;
+  box-shadow: 2px 5px 5px black;
+  border-radius: 1rem;
+  gap: 1rem;
+  margin: 1rem 1rem;
+  background-color: #FDBDAF;
 }
 
-.landing-games > img {
-  justify-self: center;
+.landing-games:hover {
+  transform: scale(1.01);
+  transition: .2s;
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .games-container {
+    background-color: rgb(255, 195, 195);
+    width: 100%;
+    display: flex;
+    border-radius: 1rem;
+    margin: 1rem 0;
+  }
+  .landing-games {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap:wrap;
+  }
+
+  .landing {
+    font-size: 1.3rem;
+  }
+}
+
+.landing-games img {
+  border-radius: 1rem;
+  
 }
 
 .game-info {
@@ -106,3 +143,15 @@ h4 {
   display: grid;
   grid-template-columns: 1fr 4fr;
 }
+
+
+
+
+
+
+
+
+
+
+
+
