--- a/src/app/styles/Navigation.css
+++ b/src/app/styles/Navigation.css
@@ -1,3 +1,13 @@
+.navContainer {
+    background-color: #F5A898;
+}
+
+
+
+
+
+
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 700px) {
     .hamburger {
