--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,6 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 /* container for main page and then class used for dynamic pages */
 main {
   margin: 5px;
@@ -55,12 +54,12 @@ h4 {
   border-radius: 1rem;
   gap: 1rem;
   margin: 1rem 1rem;
-  background-color: #FDBDAF;
+  background-color: #fdbdaf;
 }
 
 .landing-games:hover {
   transform: scale(1.01);
-  transition: .2s;
+  transition: 0.2s;
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -75,7 +74,7 @@ h4 {
   .landing-games {
     flex-direction: row;
     justify-content: center;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
   }
 
   .landing {
@@ -85,7 +84,6 @@ h4 {
 
 .landing-games img {
   border-radius: 1rem;
-  
 }
 
 .game-info {
@@ -108,6 +106,10 @@ h4 {
 
 .game-description > h3 {
   margin-bottom: 0.5rem;
+}
+
+.span {
+  font-weight: bold;
 }
 
 .reviews {
@@ -143,15 +145,3 @@ h4 {
   display: grid;
   grid-template-columns: 1fr 4fr;
 }
-
-
-
-
-
-
-
-
-
-
-
-
