--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,11 +66,12 @@ h4 {
 @media only screen and (min-width: 1200px) {
   .games-container {
     background-color: rgb(255, 195, 195);
-    width: 100%;
+    width: 98%;
     display: flex;
     border-radius: 1rem;
-    margin: 1rem 0;
+    margin: 1rem 1rem;
   }
+
   .landing-games {
     flex-direction: row;
     justify-content: center;
