--- a/src/app/styles/Navigation.css
+++ b/src/app/styles/Navigation.css
@@ -2,11 +2,15 @@
     background-color: #F5A898;
 }
 
+.nav-signUp,
+.nav-signIn {
+    background-color: rgb(202, 85, 85);
+}
 
-
-
-
-
+.nav-signUp:hover,
+.nav-signIn:hover {
+    background-color: rgb(167, 81, 81);
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 700px) {
