--- a/src/app/styles/GameReviews.css
+++ b/src/app/styles/GameReviews.css
@@ -10,6 +10,7 @@
 }
 .user-pic {
     margin: 5px;
+    border-radius: 50%;
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 700px) {
@@ -33,7 +34,45 @@
         margin-right: 5px;
     }
 }
+/*---------------------- comments form -------------------*/
+.commenting-profile-pic {
+    border-radius: 50%;
+    margin: 1.5rem .5rem;
+}
+.comment-form-container{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(156, 122, 122);
+}
 
+.comment-form-container h1 {
+    text-align: center;
+    margin: 1rem;
+    text-decoration: underline;
+    color: rgb(255, 242, 242);
+}
+.comment-form-container h2 {
+    margin: 2.54rem 1rem;
+    text-transform: capitalize;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: rgb(178, 51, 78);
+}
+.comment-form-container button {
+    margin: 1rem .7rem;
+    width: 90%;
+}
+label {
+    margin: 10px;
+    font-size: 1.1rem;
+    color: azure;
+}
+
+.add-comment-text {
+    width: 80vw;
+    margin: 5px 5px 25px 5px;
+    font-size: 1.1rem;
+}
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     .reviews {
