--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,13 @@ main {
   margin: 5px;
   /* background-color: rgb(61, 77, 90); */
 }
+
+.welcome-message {
+  font-size: 1.5rem;
+
+}
 body {
-  background-color: rgba(251, 240, 240, 0.876);
+  background-color: rgba(255, 255, 255, 0.876);
 }
 h1 {
   font-size: 24px;
@@ -39,8 +44,10 @@ h4 {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  background-color: lightgray;
+  background-color: rgb(102, 130, 213);
   border-radius: 1rem;
+  width: 1000px;
+  margin: 2rem auto;
 }
 
 .landing > h1 {
@@ -142,6 +149,9 @@ h4 {
     grid-template-columns: repeat(2,1fr);
   }
 
+  .landing {
+    width: 90%;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -149,6 +159,9 @@ h4 {
   .games-container {
     display: grid;
     grid-template-columns: repeat(3,1fr);
+  }
+  .landing {
+    width: 70%;
   }
 }
 
@@ -158,6 +171,7 @@ h4 {
     display: grid;
     grid-template-columns: repeat(4,1fr);
   }
+
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
