--- a/src/app/styles/GameInfoPage.css
+++ b/src/app/styles/GameInfoPage.css
@@ -12,10 +12,12 @@
 .game-image {
     border-radius: 5px;
     transform: scale(1.2);
+    box-shadow: 2px 2px 2px gray;
 }
 
 .game-description {
-    padding: 7px;
+    width: 400px;
+    padding: 1rem;
 }
 
 .game-title{
@@ -24,18 +26,45 @@
     color: blueviolet;
 }
 
-.heart-button {
-    width: 20%;
-}
-
 .game-description h3 {
     font-size: 1.5rem;
     font-weight: bold;
     color: rgb(82, 82, 82);
 }
+
 .game-title-container1 {
     display: flex;
 }
+
+/* The message to login for commenting */
+.not-signed-in-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 15px;
+    border: 2px solid black;
+    border-radius: 2rem;
+    width: 90%;
+    margin: 1rem auto;
+    padding: 1rem;
+    box-shadow: 2px 2px 2px gray;
+}
+
+.signUpToCommentBtn,
+.signInToCommentbtn {
+    color: #fff;
+    background-color: rgb(202, 85, 85);
+    margin: 0 auto;
+    width: 50%;
+    font-size: 1rem;
+}
+
+.signUpToCommentBtn:hover,
+.signInToCommentbtn:hover {
+    background-color: rgb(167, 81, 81);
+}
+
 
 @media only screen and (max-width: 700px) {
     .game-info-container{
@@ -49,9 +78,10 @@
     }
 
     .game-image {
-        margin-top: 38px;
+        margin-top: 40px;
+        margin-left: 20px;
         border-radius: 5px;
-        transform: scale(1.9);  
+        transform: scale(1.4);  
     }
     .game-info {
         display: flex;
@@ -89,7 +119,11 @@
         display: flex;
         flex-direction: column;
         margin: 5px;
+    }
 
+    .game-specs {
+        padding-left: 3rem;
+        /* background-color: red; */
     }
 }
 
@@ -115,6 +149,25 @@
 
     .game-info-container {
         gap: 8rem;
+    }
+    /* The message to login for commenting */
+    .not-signed-in-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        gap: 15px;
+        border: 2px solid black;
+        border-radius: 2rem;
+        padding: 1rem;
+        width: 500px;
+        margin: 1rem auto;
+    }
+
+    .signUpToCommentBtn,
+    .signInToCommentbtn {
+        margin: 0 auto;
+        width: 50%;
     }
 }
 
