--- a/src/app/styles/Navigation.css
+++ b/src/app/styles/Navigation.css
@@ -12,12 +12,19 @@
     background-color: rgb(167, 81, 81);
 }
 
+.profileLink{
+    font-size: 1.1rem;
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 700px) {
     .hamburger {
         display: flex;
     }
     
+    .profileLink{
+        margin-top: 5px;
+    }
+
     .profile-link {
         display: none;
     }
