--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,6 @@ main {
 
 .welcome-message {
   font-size: 1.5rem;
-
 }
 body {
   background-color: rgba(255, 255, 255, 0.876);
@@ -43,11 +42,13 @@ h4 {
 .landing {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 1rem;
-  background-color: rgb(102, 130, 213);
+  background-color: rgba(209, 130, 76, 0.645);
   border-radius: 1rem;
   width: 1000px;
   margin: 2rem auto;
+  justify-content: center;
 }
 
 .landing > h1 {
@@ -146,7 +147,7 @@ h4 {
 @media only screen and (max-width: 700px) {
   .games-container {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .landing {
@@ -158,7 +159,7 @@ h4 {
 @media only screen and (min-width: 600px) {
   .games-container {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
   .landing {
     width: 70%;
@@ -169,16 +170,15 @@ h4 {
 @media only screen and (min-width: 701px) {
   .games-container {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
-
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .games-container {
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
 }
 
@@ -186,7 +186,7 @@ h4 {
 @media only screen and (min-width: 1200px) {
   .games-container {
     display: grid;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(6, 1fr);
     /* background-color: rgb(255, 195, 195); */
     width: 98%;
     /* display: flex; */
@@ -205,5 +205,3 @@ h4 {
     font-size: 1.3rem;
   }
 }
-
-
