--- a/src/app/styles/UserProfilePage.css
+++ b/src/app/styles/UserProfilePage.css
@@ -1,83 +1,81 @@
 .user-profile-name {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 .h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .p {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .profile-pic {
-    /* padding: 2rem; */
-    border-radius: 50%;
-    margin: .5rem;
-    transform: scale(1.5);
+  /* padding: 2rem; */
+  border-radius: 50%;
+  margin: 0.5rem;
+  transform: scale(1.5);
 }
 
 .body {
-    margin: 1.4rem;
-
+  margin: 1.4rem;
 }
 
 .user-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 10px;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 10px;
 }
 
 .favourites {
-    margin: 1rem;
-    padding: 1rem;
-
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .fav-game {
-    width: 170px;
-    border-radius: 5px;
-    margin: 0 auto;
+  width: 170px;
+  border-radius: 5px;
+  margin: 0 auto;
 }
-.favourite-game{
-    padding: 1rem;
-    border: 2px solid black;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    box-shadow: 2px 2px 2px 2px rgb(72, 64, 64);
-    border-radius: .8rem;
-    background-color: #313131;
-    color: #dbdbdb;
-    font-weight: bold;
+.favourite-game {
+  padding: 1rem;
+  border: 2px solid black;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  box-shadow: 2px 2px 2px 2px rgb(72, 64, 64);
+  border-radius: 0.8rem;
+  background-color: #313131;
+  color: #dbdbdb;
+  font-weight: bold;
 }
 
 .fav-game-title {
-    margin-top: 1rem;
-    margin-left: 1rem;
-    text-align: center;
+  margin-top: 1rem;
+  /* margin-left: 1rem; */
+  text-align: center;
 }
 
 .fav-games-container {
-    display: grid;
-    gap: 15px;
-    grid-template-columns: repeat(3, 1fr);
-    /* background-color: beige; */
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(3, 1fr);
+  /* background-color: beige; */
 }
 @media only screen and (max-width: 580px) {
-    .user-profile-name {
-        /* background-color: red; */
-    }
+  .user-profile-name {
+    /* background-color: red; */
+  }
 
+  .fav-games-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
 
-    
-    .fav-games-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
-    }
-    
-    /* .favourite-game{
+  /* .favourite-game{
         padding: 1rem;
         border: 2px solid black;
         display: grid;
@@ -92,7 +90,7 @@
         margin: 0 auto;
     } */
 
-    /* .fav-game-title {
+  /* .fav-game-title {
         margin-top: 1rem;
         margin-left: 1rem;
         text-align: center;
@@ -100,26 +98,26 @@
 }
 
 @media only screen and (min-width: 581px) {
-    .fav-games-container {
-        grid-template-columns: repeat(3, 1fr);
-    }
+  .fav-games-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media only screen and (min-width: 801px) {
-    .fav-games-container {
-        grid-template-columns: repeat(4, 1fr);
-    }
+  .fav-games-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 @media only screen and (min-width: 1001px) {
-    .fav-games-container {
-        grid-template-columns: repeat(5, 1fr);
-    }
+  .fav-games-container {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
 
 @media only screen and (min-width: 1200px) {
-    .fav-games-container {
-        grid-template-columns: repeat(7, 1fr);
-    }
+  .fav-games-container {
+    grid-template-columns: repeat(7, 1fr);
+  }
 }
 /* Mobile devices              320px-480px
 iPads, Tablets              481px-768px
