--- a/src/app/styles/GameInfoPage.css
+++ b/src/app/styles/GameInfoPage.css
@@ -1,6 +1,7 @@
 .game-info-container {
   margin: 1rem;
-  padding: 1rem;
+  /* padding: 1rem; */
+  margin-top: 2rem;
 }
 
 .game-title-container {
@@ -17,7 +18,7 @@
 
 .game-description {
   width: 400px;
-  padding: 1rem;
+  padding: 0rem 1rem;
 }
 
 .game-title {
@@ -47,6 +48,8 @@
   border-radius: 2rem;
   width: 90%;
   margin: 1rem auto;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
   padding: 1rem;
   box-shadow: 2px 2px 2px gray;
 }
@@ -88,7 +91,7 @@
   }
 
   .game-description {
-    margin: 4rem 0.5rem;
+    /* margin: 1rem 0.5rem; */
     font-size: 1.18rem;
   }
 
@@ -128,7 +131,7 @@
 
 @media only screen and (min-width: 600px) {
   .game-description {
-    margin: 5rem 1rem;
+    margin: 0rem 1rem 3rem 0rem;
     font-size: 1.2rem;
   }
 
@@ -161,6 +164,7 @@
     padding: 1rem;
     width: 500px;
     margin: 1rem auto;
+    margin-bottom: 2rem;
   }
 
   .signUpToCommentBtn,
@@ -178,9 +182,10 @@
   }
 
   .game-description {
-    margin-top: 8rem;
+    margin-top: 2rem;
     margin-left: 1rem;
     font-size: 1.3rem;
+    width: 90%;
   }
 
   .game-description h3 {
@@ -194,7 +199,7 @@
 
   .game-info-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     align-content: flex-start;
   }
